--- a/vanilla-java-sandbox/pom.xml
+++ b/vanilla-java-sandbox/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.14.5</version>
         </dependency>
+        <!-- aspectj -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.9</version>
+        </dependency>
     </dependencies>
 
 </project>
